Add confessfollowing feature